version 11: fixed card alignment

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -36,7 +36,7 @@ a:hover {
 }
 
 .card {
-	height: calc(100%);
+	height: 100vh;
 }
 
 .text-shadow {
